turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:12: error: not found: value color
	quart(color.black)
              ^Source:13: error: not found: value color
	quart(color.red)
              ^Source:14: error: not found: value color
	quart(color.yellow)
              ^Source:15: error: not found: value color
	quart(color.magenta)
              ^