turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	def quart(c:Color) ={
	setCouleur(c)		
	var i = 0
	for (i<- 1 to 90) {
		avance(100)
		recule(100)
		droite(1)
	}
	}
	quart(color.black)
	quart(color.red)
	quart(color.yellow)
	quart(color.magenta)
}
